--- a/projects.html
+++ b/projects.html
@@ -17,10 +17,10 @@
     <nav class="h-auto items-center justify-center flex relative m-[20px] p-[16px] opacity-[80%] dark:opacity-[80%]">
       <div class="flex bg-[#F4F3F0CC] dark:bg-gray-600 rounded-full box-border border-8 border-[#F4F3F0CC] dark:border-gray-600 shadow-md relativ items-center text-[16px] space-x-[10px] font-poppins font-thin">
         <!-- Title -->
-        <button><a href="/tailwindnyoba/about.html" class="mx-[5px] px-[20px] py-2.5">About</a></button>
-        <button><a href="/tailwindnyoba/projects.html" class="mx-[5px] px-[20px] py-2.5 bg-zinc-300 rounded-full dark:bg-gray-500 font-bold">Projects</a></button>
-        <button><a href="/tailwindnyoba/contact.html" class="mx-[5px] px-[20px] py-2.5">Contact</a></button>
-        <button><a href="/tailwindnyoba/source.html" class="mx-[5px] px-[20px] py-2.5">Source</a></button>
+        <button><a href="https://asstorebytio.github.io/zpyo/about.html" class="mx-[5px] px-[20px] py-2.5 ">About</a></button>
+        <button><a href="https://asstorebytio.github.io/zpyo/projects.html" class="mx-[5px] px-[20px] py-2.5 bg-zinc-300 rounded-full dark:bg-gray-500 font-bold">Projects</a></button>
+        <button><a href="https://asstorebytio.github.io/zpyo/contact.html" class="mx-[5px] px-[20px] py-2.5">Contact</a></button>
+        <button><a href="https://asstorebytio.github.io/zpyo/source.html" class="mx-[5px] px-[20px] py-2.5">Source</a></button>
         <!-- Toggle Button -->
         <button id="theme-toggle" type="button" class="text-gray-900 dark:text-[#F4F3F0CC] bg-[#dad8d4cc] dark:bg-gray-500 rounded-full text-sm p-2.5 w-10 h-10">
           <svg id="theme-toggle-dark-icon" class="w-5 h-5 hidden" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
