--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 
     <!-- Sidebar -->
     <div class="px-[8rem] mt-[-8rem] py-[3rem] md:px-[6rem] sm:px-[4rem] min-h-screen flex justify-center items-center space-x-4">
-      <div class="text-start">
+      <div class="text-start rounded-md box-border bg-[#F4F3F0CC] dark:bg-gray-600">
         <h1 class="font-mono font-bold text-xl">Perkenalan.</h1>
         <p class="font-mono pt-5">
           Aku Dewa Made Mattio Mahes Pratama, atau dipanggil Tio.<br />
